--- a/packages/@statusfy/core/package.json
+++ b/packages/@statusfy/core/package.json
@@ -35,7 +35,10 @@
   ],
   "dependencies": {
     "@babel/runtime-corejs3": "^7.7.6",
-    "@fortawesome/fontawesome-svg-core": "1.2.26",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxtjs/axios": "5.9.0",
     "@nuxtjs/onesignal": "3.0.0-beta.16",
     "@nuxtjs/pwa": "3.0.0-beta.19",
@@ -69,8 +72,7 @@
     "sitemap": "3.2.2",
     "url": "0.11.0",
     "v-tooltip": "2.0.2",
-    "vue-multianalytics": "1.11.7",
-    "vue-svgicon": "3.2.6"
+    "vue-multianalytics": "1.11.7"
   },
   "devDependencies": {
     "@nuxt/types": "0.5.7",
