--- a/packages/@statusfy/cli/package.json
+++ b/packages/@statusfy/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@statusfy/cli",
-  "version": "0.5.0",
+  "version": "0.6.0-alpha.0",
   "description": "CLI for Statusfy",
   "main": "index.js",
   "publishConfig": {
