--- a/packages/@statusfy/cli/package.json
+++ b/packages/@statusfy/cli/package.json
@@ -21,12 +21,10 @@
   },
   "homepage": "https://github.com/bazzite/statusfy#readme",
   "dependencies": {
+    "@statusfy/common": "^0.7.0-alpha.0",
+    "@statusfy/core": "^0.7.0-alpha.0",
+    "@statusfy/editor": "^0.7.0-alpha.0",
     "commander": "4.0.1",
     "semver": "7.1.1"
-  },
-  "peerDependencies": {
-    "@statusfy/common": "0.5.0",
-    "@statusfy/core": "0.5.0",
-    "@statusfy/editor": "0.5.0"
   }
 }
